	* tape-src/tests/amtapeio.test.015: Ditto.
	* tape-src/tests/amtapeio.test.016: Ditto.
	* tape-src/tests/amtapeio.test.017: Ditto.
	* tape-src/tests/amtapeio.test.018: Ditto.
	* tape-src/tests/cleartape: Ditto.
	* tape-src/tests/newtest: Ditto.
	* tape-src/tests/rerun: Ditto.
	* tape-src/tests/runtest: Ditto.
	* tape-src/tests/testdist: Ditto.
	* tape-src/tests/torture: Ditto.

2001-01-23 John R. Jackson <jrj@purdue.edu>

	* configure.in: Test for setmntent.
	* client-src/getfsent.c: Add some support for Redhat 7 /etc/fstab
	  changes that indirectly reference the device for a file system.

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.2p1)

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* NEWS: 2.4.2p1 is a bug fix release.

2001-01-20  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* docs/INSTALL: Notes about tar-1.13.19

2001-01-07  Thomas Hepper <th@ant.han.de>

	* changer-src/chg-scsi.c: Moved defs. for config_t and changer_t
	into scsi-defs.h
	New option havebarcode to force the reading of the barcode labels
	* changer/src/scsi-changer-driver.c: GenericBarCode now returns
	true/false depending on the setting of havebarcode.
	Removed EXB230DElementStatus, the exsisting Exabyte function works.
	Fixed more warnings from -Wshadow

2001-01-04 John R. Jackson <jrj@purdue.edu>

	* common-src/error.c (error): If the debug file pointer is set, log
	  any fatal error message to it and close the file so it has a good
	  trace of what happened and when.

2001-01-04 John R. Jackson <jrj@purdue.edu>

	* client-src/killpgrp.c: Calls to error() do not need a newline.

2001-01-04 John R. Jackson <jrj@purdue.edu>

	* man/amanda.8.in: Try to make it clearer that dumpcycle and maxdumps
	  changes in the main part of the config file must appear before any
	  dumptype definitions, and also that inherited dumptypes must appear
	  before their reference.
